[package]
name = "crepe"
version = "0.1.3"
authors = ["Eric Zhang <ekzhang1@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Datalog in Rust as a procedural macro"
repository = "https://github.com/ekzhang/crepe"
documentation = "https://docs.rs/crepe"
keywords = ["datalog", "analysis", "logic-programming", "compiler"]
readme = "README.md"
edition = "2018"

[lib]
proc-macro = true

[dev-dependencies]
trybuild = "1.0"

[dependencies]
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
proc-macro-error = "1.0"
petgraph = "0.5"
